--- a/pkg/debian/changelog
+++ b/pkg/debian/changelog
@@ -1,3 +1,15 @@
+nektar++ (5.2.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Thu, 24 Feb 2022 19:09:22 +0000
+
+nektar++ (5.1.1-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Thu, 24 Feb 2022 19:00:42 +0000
+
 nektar++ (5.1.0-1) unstable; urgency=medium
 
   * New upstream release. 
