Updated the user guide for the GJP stabilisation

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -605,3 +605,14 @@ year = {2016}
 	author = "Paul F. Fischer",
 	abstract = "Projection techniques are developed for computing approximate solutions to linear systems of the form Axn = bn, for a sequence n = 1, 2,…, e.g. arising from time discretization of a partial differential equation. The approximate solutions are based upon previous solutions, and can be used as initial guesses for iterative solution of the system, resulting in significantly reduced computational expense. Examples of two- and three-dimensional incompressible Navier-Stokes calculations are presented in which xn represents the pressure at time level tn, and A is a consistent discrete Poisson operator. In flows containing significant dynamic activity, these projection techniques lead to as much as a two-fold reduction in solution time."
 }
+
+@article{moura2022gradient,
+  title={Gradient jump penalty stabilisation of spectral/hp element discretisation for under-resolved turbulence simulations},
+  author={Moura, Rodrigo C and Cassinelli, Andrea and da Silva, Andr{\'e} FC and Burman, Erik and Sherwin, Spencer J},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={388},
+  pages={114200},
+  year={2022},
+  publisher={Elsevier}
+}
+
