--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -1137,8 +1137,15 @@ problems, GJP stabilisation should suffices though.
 \end{lstlisting}
 
 Another option for the GJP stabilisation is to use \inltt{Explicit} for its value
-instead of \inltt{SemiImplicit}\\
+instead of \inltt{SemiImplicit}. If the \inltt{Explicit} value is set, there is 
+an additional option that can be set for the explicit GJP stabilisation in the 
+solver info as follwos.
 
+\begin{lstlisting}[style=XMLStyle]
+<I PROPERTY="GJPNormalVelocity" VALUE="True"/>
+\end{lstlisting}
+Using the \inltt{GJPNormalVelocity}, the GJP formulation  will uses the average
+velocity normal to the edge/face as the velocity scaling of jump term. 
 
 \item \inltt{DEALIASING}: activates the 3/2 padding rule on the advection term
 of a Quasi-3D simulation.
@@ -1170,7 +1177,7 @@ the session file:
 \item \inltt{MaxSubSteps}: perform a maxmimum  number of substeps in sub-stepping algorithm otherwise exit (default is 100).
 \item \inltt{SVVCutoffRatio}: sets the ratio of Fourier frequency not affected by the SVV technique (default value = 0.75, i.e. the first 75\% of frequency are not damped).
 \item \inltt{SVVDiffCoeff}: sets the SVV diffusion coefficient (default value = 0.1 (Exponential and Power kernel), 1 (DG-Kernel)).
-\item \inltt{GJPJumpScale}: Sets the Jump scale parameter for the GJP stabilisation with the default value \inltt{GJPJumpScale=1}.
+\item \inltt{GJPJumpScale}: This is a parameter that scales all of the jump terms in the GJP stabilisation formualtion. The default value \inltt{GJPJumpScale=1}.
 \item \inltt{IO\_CFLWriteFld}: sets a treshold value for the CFL number. If CFL exceeds this value, the flow field is written to file (only once). This is useful for debugging purposes, allowing to visually inspect a flow field that is becoming unstable.
 \item \inltt{IO\_CFLWriteFldNumSteps}: sets the number of timesteps after which \inltt{IO\_CFLWriteFld} becomes operational. This avoids writing the flow field at the beginning of a simulation when initialising a new geometry.
 \end{itemize}
