--- a/docs/user-guide/xml/xml-filters.tex
+++ b/docs/user-guide/xml/xml-filters.tex
@@ -361,6 +361,50 @@ An example syntax is given below:
   </FILTER>
 \end{lstlisting}
 
+\subsection{Integral}\label{filters:Integral}
+
+This filter produces a file containing the time-evolution of the integral of
+the solver variables on user defined composites. By default this file is called
+\inltt{session.int} where \inltt{session} is the session name.
+
+The following parameters are supported:
+
+\begin{center}
+    \begin{tabularx}{0.99\textwidth}{lllX}
+        \toprule
+        \textbf{Option name} & \textbf{Required} & \textbf{Default} &
+        \textbf{Description} \\
+        \midrule
+        \inltt{OutputFile}      & \xmark   & \inltt{session} &
+        Prefix of the output filename to which the integrals are written.\\
+        \inltt{OutputFrequency} & \xmark   & 1 &
+        Number of timesteps after which output is written.\\
+        \inltt{OutputPrecision} & \xmark   & 7 &
+        Precision with which the output is written.\\
+        \inltt{Composites} & \cmark   & - &
+        Composites on which to calculate the integral.\\
+        \bottomrule
+    \end{tabularx}
+\end{center}
+
+Multiple composites can be defined together by using ranges with each composite
+grouping producing a summed output for each variable in the \inltt{OutputFile}.
+For example \inltt{C[1,3,5-7]} would produce a single integral output for each
+variable whilst \inltt{C[1-3], C[4]} would produce two.
+
+Only composites of the same or one dimension below the mesh are supported.
+
+An example syntax is given below:
+
+\begin{lstlisting}[style=XMLStyle,gobble=2]
+  <FILTER TYPE="Integral">
+      <PARAM NAME="OutputFile">IntegralFile</PARAM>
+      <PARAM NAME="OutputFrequency">10</PARAM>
+      <PARAM NAME="OutputPrecision"> 12 </PARAM>
+      <PARAM NAME="Composites"> C[1], C[2-4,6]</PARAM>
+  </FILTER>
+\end{lstlisting}
+
 \subsection{FieldConvert checkpoints}
 
 This filter applies a sequence of FieldConvert modules to the solution, 
