update user guide

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,3 +1,15 @@
+@article{ducros1999large,
+  title={Large-eddy simulation of the shock/turbulence interaction},
+  author={Ducros, F and Ferrand, V and Nicoud, Franck and Weber, C and Darracq, D and Gacherieu, C and Poinsot, Thierry},
+  journal={Journal of Computational Physics},
+  volume={152},
+  number={2},
+  pages={517--549},
+  year={1999},
+  publisher={Elsevier}
+}
+
+
 @inproceedings{persson2006sub,
   title={Sub-cell shock capturing for {D}iscontinuous {G}alerkin methods},
   author={Persson, P.-O. and Peraire, J.},
