--- a/docs/user-guide/xml/xml-filters.tex
+++ b/docs/user-guide/xml/xml-filters.tex
@@ -385,7 +385,7 @@ The following parameters are supported:
         \inltt{OutputFrequency} & \xmark   & 1 &
         Number of timesteps after which output is written.\\
         \inltt{OutputPrecision} & \xmark   & 7 &
-        Precision with which the output is written.\\
+        Decimal precision with which the output is written.\\
         \inltt{Composites} & \cmark   & - &
         Composites on which to calculate the integral.\\
         \bottomrule
