Updated User Guide for MR!1347
Fixed typo, forgot backslash before underscore in name of variable.

--- a/docs/user-guide/solvers/compressible-flow.tex
+++ b/docs/user-guide/solvers/compressible-flow.tex
@@ -237,7 +237,7 @@ conditions are employed (i.e. $T_{w}$). Default value = 300.15$K$.
 \item \inltt{CFL} is the CFL number (explicit and implicit solvers).
 \item \inltt{CFLGrowth} is the growing CFL (explicit and implicit solvers).
 \item \inltt{CFLEnd} is the maximum value of the CFL number (explicit and implicit solvers).
-\item \inltt{Timer_IO_Level} defines the amount of timer information that is printed after the solver is finished.
+\item \inltt{Timer\_IO\_Level} defines the amount of timer information that is printed after the solver is finished.
       The default value is -1, which disables output. By selecting a value between 0 and 2, more detailed timer
       information is printed.
 \end{itemize}
