--- a/pkg/debian/changelog
+++ b/pkg/debian/changelog
@@ -1,3 +1,9 @@
+nektar++ (5.2.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Wed, 20 Jul 2022 07:30:14 +0100
+
 nektar++ (5.1.0-1) unstable; urgency=medium
 
   * New upstream release. 
