Feature/high order vtu output

--- a/docs/user-guide/user-guide.tex
+++ b/docs/user-guide/user-guide.tex
@@ -32,6 +32,9 @@ openany, % A chapter may start on either a recto or verso page.
 \usepackage{makeidx}
 \usepackage{import}
 
+\usepackage{dirtree} % Directory tree structure visualisation
+\usepackage{multicol} % Multi-columns
+
 %%% PAGE LAYOUT
 %%%-----------------------------------------------------------------------------
 \setlrmarginsandblock{0.15\paperwidth}{*}{1} % Left and right margin
