Slightly updated documentation

--- a/docs/user-guide/command-line/command-line.tex
+++ b/docs/user-guide/command-line/command-line.tex
@@ -43,6 +43,10 @@ When using a fully-Fourier expansion, specifies the number of processes to use i
 \hangindent=1.5cm
 When using Fourier expansions, specifies the number of processes to use in the z-coordinate direction.
 
+\lstinline[style=BashInputStyle]{--npt [int]}\\
+\hangindent=1.5cm
+When using parallel-in-time integration (Parareal driver), specifies the number of chunks to use in the time direction.
+
 \lstinline[style=BashInputStyle]{--part-info}\\
 \hangindent=1.5cm
 Prints detailed information about the generated partitioning, such as number of
