--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -397,6 +397,7 @@ Specifically, FieldConvert has these additional functionalities
 \item \inltt{combineAvg}: Combine two \nekpp binary output (.chk or .fld) field file containing averages of fields (and
 possibly also Reynolds stresses) into single file;
 \item \inltt{concatenate}: Concatenate a \nekpp binary output (.chk or .fld) field file into single file (deprecated);
+\item \inltt{divergence}: Computes the divergence of the velocity field.
 \item \inltt{dof}: Count the total number of DOF;
 \item \inltt{equispacedoutput}: Write data as equi-spaced output using simplices to represent the data for connecting points;
 \item \inltt{extract}: Extract a boundary field;
@@ -681,6 +682,17 @@ FieldConvert  test\_b0.xml test\_b0.fld test\_b0.dat
 This will obviously generate a Tecplot output if a .dat file
 is specified as last argument. A .vtu extension will produce
 a Paraview or VisIt output.
+%
+%
+%
+\subsection{Calculate divergence: \textit{divergence} module}
+To perform the divergence calculation and obtain an output
+field containing the divergence solution, the user can run
+\begin{lstlisting}[style=BashInputStyle]
+FieldConvert -m divergence test.xml test.fld test-div.fld
+\end{lstlisting}
+where the file \inltt{test-div.fld} can be processed in a similar
+way as described in section \ref{s:utilities:fieldconvert:sub:convert}.
 %
 %
 %
